parser/tests/bad/ref03.st
% 'character' is unsubscriptable, for substrings, use 'x[n .. m]' instead

var str : string
var subStr := str[1][1]
